add s07, s08